# devscout-automation

./: .env.example  .gitignore  GITHUB.md  LICENSE  README.md  check_browsers.py  demo.py  main.py  main_manual_browser.py  main_requests.py  pyproject.toml  scheduler.py  test_login.py  test_setup.py
src/: __init__.py
